# NMODE

./: .gitignore  CMakeLists.txt  README.md  header.h
cmake/: CMakeDetermineGoCompiler.cmake  FindPackageHandleStandardArgs.cmake  IncludePackages.cmake
contrib/yars2nmode/: CMakeLists.txt  svenja.xml  yars2nmode.go
experiments/hexaboard/: resources.cfg
experiments/openai/: CMakeLists.txt  openai.cpp  openai.py  run_openai
experiments/w3irdo/: resources.cfg
src/: CMakeLists.txt  Configuration.cpp  ENPException.h  P3D.h  RNN.cpp  RNN.h  macros.h  main.cpp
src/base/: CMakeLists.txt  CfgReproduction.cpp  CfgReproduction.h  ChangeLog.h  Configuration.cpp  Configuration.h  Data.cpp  Data.h  DataConfiguration.cpp  DataConfiguration.h  DataENP.cpp  DataENP.h  DataEvolution.cpp  DataEvolution.h  DataEvolutionNode.cpp  DataEvolutionNode.h  DataIndividual.cpp  DataIndividual.h  DataModule.cpp  DataModule.h  DataModuleEdge.cpp  DataModuleEdge.h  DataModuleNode.cpp  DataModuleNode.h  DataNode.cpp  DataNode.h  DataParseAttribute.cpp  DataParseElement.h  DataPopulation.cpp  DataPopulation.h  DataSimulator.h  ENP.cpp  ENP.h  ENPErrorHandler.cpp  ENPErrorHandler.h  Edge.cpp  Edge.h  Evaluation.cpp  Evaluation.h  Evolution.cpp  (+53 more)
src/base/data/: ChangeLog.h  Data.cpp  Data.h  DataConfiguration.cpp  DataConfiguration.h  DataENP.cpp  DataENP.h  DataEdge.cpp  DataEdge.h  DataEvolution.cpp  DataEvolution.h  DataEvolutionEdge.cpp  DataEvolutionEdge.h  DataEvolutionNode.cpp  DataEvolutionNode.h  DataIndividual.cpp  DataIndividual.h  DataModule.cpp  DataModule.h  DataModuleEdge.cpp  DataModuleNode.cpp  DataModuleNode.h  DataNode.cpp  DataNode.h  DataParseAttribute.cpp  DataParseAttribute.h  DataParseElement.cpp  DataPopulation.cpp  DataPopulation.h  DataPopulationModule.cpp  DataPopulationModule.h  DataPopulationModuleEdge.cpp  DataPopulationModuleEdge.h  DataPopulationModuleNode.cpp  DataPopulationModuleNode.h  DataSimulator.cpp  DataSimulator.h  DataXsdNode.cpp  DataXsdNode.h  Version.cpp  (+3 more)
src/base/xsd/generator/: YarsXSDGenerator.cpp  YarsXSDGenerator.h
src/base/xsd/graphviz/: XsdGraphvizExporter.cpp  XsdGraphvizGenerator.cpp  XsdGraphvizGenerator.h
src/base/xsd/graphviz/graph/: XsdChoiceGraphNode.h  XsdElementGraphNode.h  XsdEnumerationGraphNode.h  XsdGraph.cpp  XsdGraphNode.h  XsdIntervalGraphNode.h  XsdRegularExpressionGraphNode.h  XsdSequenceGraphNode.h
src/base/xsd/parser/: YarsXSDSaxHandler.cpp  YarsXSDSaxHandler.h  YarsXSDSaxParser.cpp
src/binaries/: CMakeLists.txt  convert.cpp  evaluate.cpp  evolve.cpp  main.cpp
src/data/: CMakeLists.txt  ChangeLog.h  Data.cpp  Data.h  DataConfiguration.cpp  DataConfiguration.h  DataENP.cpp  DataENP.h  DataEvolution.cpp  DataEvolution.h  DataEvolutionEdge.cpp  DataEvolutionNeuron.cpp  DataEvolutionNeuron.h  DataEvolutionSynapse.cpp  DataEvolutionSynapse.h  DataModule.cpp  DataModule.h  DataModuleNeuron.cpp  DataModuleNeuron.h  DataModuleNode.cpp  DataModuleNode.h  DataNode.h  DataParseAttribute.cpp  DataParseAttribute.h  DataParseElement.cpp  (+3 more)
src/evo/: CMakeLists.txt  Edge.cpp  Edge.h  Evaluate.cpp  Evaluate.h  EvaluateTemplate.cpp  EvaluateTemplate.h  Evolve.cpp  Evolve.h  Exporter.cpp  Exporter.h  Individual.cpp  Individual.h  Module.cpp  Module.h  ModuleGnuplot.cpp  ModuleGnuplot.h  ModuleMutationOperator.cpp  ModuleMutationOperator.h  ModuleNeuron.cpp  ModuleNeuron.h  MutateIndividualOperator.cpp  MutateIndividualOperator.h  MutateModuleOperator.cpp  MutateModuleOperator.h  MutatePopulationOperator.cpp  MutatePopulationOperator.h  Mutation.cpp  Mutation.h  Node.cpp  Node.h  Population.cpp  Population.h  PopulationExporter.cpp  PopulationExporter.h  PopulationToXml.cpp  Reproduction.cpp  Reproduction.h
src/exp/braitenberg/: CMakeLists.txt  Evaluate.cpp  Evaluate.h  Evolve.cpp  evolve-braitenberg.cpp
src/exp/w3irdo/: CMakeLists.txt  Evaluate.cpp  Evaluate.h  Evolve.cpp  Evolve.h  w3irdo.cpp  w3irdo2_cfg.xml  w3irdo_3_modules_cfg.xml  w3irdo_cfg.xml  w3irdo_force_2_modules_cfg.xml  w3irdo_force_cfg.xml
src/lib/: Braitenberg.cpp  Braitenberg.h  CMakeLists.txt  W3irdo.cpp  W3irdo.h  W3irdoH.cpp  W3irdoH.h  W3irdoNF.cpp  W3irdoNF.h  W3irdoPI.cpp  W3irdoPI.h
src/nmode/: CMakeLists.txt  CfgEvaluation.cpp  CfgEvaluation.h  CfgMutation.cpp  CfgMutation.h  CfgMutationEdge.cpp  CfgMutationEdge.h  CfgMutationNode.cpp  CfgMutationNode.h  CfgReproduction.cpp  CfgReproduction.h  CfgVisualisation.cpp  CfgVisualisation.h  ChangeLog.h  Com.cpp  Com.h  Configuration.cpp  Configuration.h  Convert.cpp  Convert.h  Data.cpp  Data.h  DataConfiguration.cpp  DataConfiguration.h  ENP.cpp  ENP.h  Edge.cpp  Edge.h  Evaluate.cpp  Evaluate.h  EvaluateTemplate.cpp  EvaluateTemplate.h  Evaluation.cpp  Evaluation.h  EvaluationParameter.cpp  EvaluationParameter.h  EvaluationParameterMap.hpp  Evolution.cpp  EvolutionEdge.h  EvolutionNode.h  (+133 more)
src/xsd/: CMakeLists.txt
src/xsd/generator/: XSDString.h  YarsXSDGenerator.cpp  YarsXSDGenerator.h
src/xsd/graphviz/: XsdGraphvizExporter.h  XsdGraphvizGenerator.cpp  XsdGraphvizGenerator.h
src/xsd/graphviz/graph/: XsdChoiceGraphNode.h  XsdElementGraphNode.cpp  XsdElementGraphNode.h  XsdEnumerationGraphNode.cpp  XsdEnumerationGraphNode.h  XsdGraph.cpp  XsdGraphLink.cpp  XsdGraphLink.h  XsdGraphNode.h  XsdGraphNodeInstance.h  XsdIntervalGraphNode.h  XsdRegularExpressionGraphNode.cpp  XsdRegularExpressionGraphNode.h  XsdSequenceGraphNode.h
src/xsd/parser/: YarsXSDSaxHandler.cpp  YarsXSDSaxHandler.h  YarsXSDSaxParser.cpp
src/xsd/specification/: XsdChoice.cpp  XsdElement.cpp  XsdElement.h  XsdInterval.cpp  XsdInterval.h  XsdNode.cpp  XsdSpecification.cpp  XsdSpecification.h
tests/: CMakeLists.txt  braitenberg.xml  cfg_test.cpp  cfg_test.h  io_test.cpp  io_test.h  main.cpp  modules_test.cpp  modules_test.h  rnn_from_individual_test.cpp  rnn_from_individual_test.h  rnn_test.cpp  rnn_test.h  test.ini  test.xml  test_box.xml  test_for_visualisation.xml  test_init.xml  test_init_no_population.xml  test_init_with_population.xml  w3irdo.xml  w3irdo2.xml  w3irdo3.xml  w3irdo_old.xml  xml_parse.cpp  xml_test.cpp  xml_test.h
(+180 files in other folders)
